[gd_scene load_steps=12 format=3 uid="uid://ddql5rik7d1ka"]

[ext_resource type="Script" uid="uid://ctbbg5sdmup5i" path="res://main.gd" id="1_erc6u"]
[ext_resource type="Texture2D" uid="uid://bedue4nb5dkgn" path="res://carpincho.png" id="2_o12qc"]
[ext_resource type="Texture2D" uid="uid://cg5dor0ax8che" path="res://ctclogo.png" id="3_tgq2g"]
[ext_resource type="Texture2D" uid="uid://dfbgjsn4tknpj" path="res://characters/kapituf.png" id="4_lddcf"]
[ext_resource type="AudioStream" uid="uid://dc7oxwlixbuj7" path="res://characters/clicksoundeffect.mp3" id="5_4mxkv"]
[ext_resource type="Texture2D" uid="uid://bqkqjqmsvijag" path="res://settings-svgrepo-com.svg" id="6_cm8fx"]
[ext_resource type="Texture2D" uid="uid://bwkgq4m83adog" path="res://gamepad-svgrepo-com.svg" id="7_l0fr7"]
[ext_resource type="Texture2D" uid="uid://b4qqwot8f4s4h" path="res://store-1-svgrepo-com.svg" id="8_3s57u"]
[ext_resource type="Texture2D" uid="uid://dx7f4kmo45k4j" path="res://leaderboard-svgrepo-com.svg" id="9_gnyi7"]
[ext_resource type="Texture2D" uid="uid://wed8alguxsos" path="res://web-svgrepo-com.svg" id="10_gp6ly"]
[ext_resource type="Texture2D" uid="uid://d7fv1a3k42ow" path="res://ctcoin.png" id="11_hjyt8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_erc6u")

[node name="Carpincho" type="Sprite2D" parent="."]
position = Vector2(603, 402)
scale = Vector2(0.985742, 0.877865)
texture = ExtResource("2_o12qc")

[node name="Ctclogo" type="Sprite2D" parent="."]
position = Vector2(962, 66)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_tgq2g")

[node name="Tuf" type="TextureButton" parent="."]
offset_left = 427.0
offset_top = 168.0
offset_right = 993.0
offset_bottom = 768.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("4_lddcf")

[node name="Username" type="TextEdit" parent="."]
offset_left = 8.0
offset_top = 9.0
offset_right = 271.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "User"

[node name="Counter" type="Label" parent="."]
offset_left = 470.0
offset_top = 118.0
offset_right = 659.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 60
text = "points"
horizontal_alignment = 1

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4mxkv")

[node name="Right" type="Button" parent="."]
offset_left = 761.0
offset_top = 205.0
offset_right = 779.0
offset_bottom = 236.0
scale = Vector2(10, 10)
text = ">"

[node name="Left" type="Button" parent="."]
offset_left = 229.0
offset_top = 205.0
offset_right = 247.0
offset_bottom = 236.0
scale = Vector2(10, 10)
text = "<"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 222.0
offset_top = 88.0
offset_right = 922.0
offset_bottom = 129.0
max_value = 1000.0
show_percentage = false

[node name="SettingsButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 86.0
offset_right = 106.0
offset_bottom = 179.0
text = "SETTINGS"

[node name="Settings" type="Sprite2D" parent="SettingsButton"]
position = Vector2(46, 45)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_cm8fx")

[node name="GamesButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 294.0
offset_right = 106.0
offset_bottom = 387.0
text = "MINIGAME"

[node name="Games" type="Sprite2D" parent="GamesButton"]
position = Vector2(46, 49)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_l0fr7")

[node name="StoreButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 190.0
offset_right = 106.0
offset_bottom = 283.0
text = "STORE"

[node name="Store" type="Sprite2D" parent="StoreButton"]
position = Vector2(46, 48)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_3s57u")

[node name="LeaderboardButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 400.0
offset_right = 106.0
offset_bottom = 493.0
text = "LEADERS"

[node name="Leaderboard" type="Sprite2D" parent="LeaderboardButton"]
position = Vector2(46, 48)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_gnyi7")

[node name="QuitButton" type="Button" parent="."]
offset_left = 127.0
offset_top = 539.0
offset_right = 218.0
offset_bottom = 632.0
text = "X QUIT"

[node name="NextcharButton" type="Button" parent="."]
offset_left = 995.0
offset_top = 135.0
offset_right = 1086.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 52
text = "?"

[node name="WebsiteButton" type="Button" parent="."]
offset_left = 18.0
offset_top = 539.0
offset_right = 109.0
offset_bottom = 632.0
text = "WEBSITE"

[node name="Website" type="Sprite2D" parent="WebsiteButton"]
position = Vector2(46, 47)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_gp6ly")

[node name="LinkButton" type="LinkButton" parent="WebsiteButton"]
layout_mode = 0
offset_right = 91.0
offset_bottom = 93.0
uri = "https://sites.google.com/view/kapibara-tm"

[node name="Remain" type="Label" parent="."]
offset_left = 478.0
offset_top = 35.0
offset_right = 652.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 40
text = "remain"
horizontal_alignment = 1

[node name="RemainText" type="Label" parent="."]
offset_left = 302.0
offset_top = 3.0
offset_right = 804.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 30
text = "Next character: remaining"
horizontal_alignment = 1

[node name="Coins" type="Label" parent="."]
offset_left = 513.0
offset_top = 507.0
offset_right = 645.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 50
text = "coins"
horizontal_alignment = 1

[node name="CtcoinButton" type="TextureButton" parent="."]
offset_left = 542.0
offset_top = 569.0
offset_right = 1117.0
offset_bottom = 1114.0
scale = Vector2(0.13, 0.13)
texture_normal = ExtResource("11_hjyt8")

[connection signal="pressed" from="Tuf" to="." method="on_char_pressed"]
[connection signal="pressed" from="Left" to="." method="capybara_button_pressed"]
[connection signal="changed" from="ProgressBar" to="." method="_on_progress_bar_changed"]
[connection signal="pressed" from="QuitButton" to="." method="quit_button_pressed"]
