[gd_scene load_steps=6 format=3 uid="uid://c7gq0f6btotdd"]

[ext_resource type="Script" uid="uid://ctbbg5sdmup5i" path="res://main.gd" id="1_ypnlf"]
[ext_resource type="Texture2D" uid="uid://bedue4nb5dkgn" path="res://carpincho.png" id="2_ntdta"]
[ext_resource type="Texture2D" uid="uid://cg5dor0ax8che" path="res://ctclogo.png" id="3_pnr1s"]
[ext_resource type="AudioStream" uid="uid://dc7oxwlixbuj7" path="res://characters/clicksoundeffect.mp3" id="5_h303l"]
[ext_resource type="Texture2D" uid="uid://d7fv1a3k42ow" path="res://ctcoin.png" id="6_5sr7i"]

[node name="Node2D" type="Node2D"]
position = Vector2(7, 2)
script = ExtResource("1_ypnlf")

[node name="Carpincho" type="Sprite2D" parent="."]
position = Vector2(603, 402)
scale = Vector2(0.985742, 0.877865)
texture = ExtResource("2_ntdta")

[node name="Ctclogo" type="Sprite2D" parent="."]
position = Vector2(962, 66)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_pnr1s")

[node name="Username" type="TextEdit" parent="."]
offset_left = 8.0
offset_top = 9.0
offset_right = 271.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
placeholder_text = "User"
metadata/_edit_use_anchors_ = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_h303l")

[node name="Coins" type="Label" parent="."]
offset_left = 513.0
offset_top = 507.0
offset_right = 645.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 50
text = "coins"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CtcoinButton" type="TextureButton" parent="."]
offset_left = 542.0
offset_top = 569.0
offset_right = 1117.0
offset_bottom = 1114.0
scale = Vector2(0.13, 0.13)
texture_normal = ExtResource("6_5sr7i")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 303.0
offset_top = 146.0
offset_right = 766.0
offset_bottom = 549.0

[node name="SettingsButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 86.0
offset_right = 106.0
offset_bottom = 179.0
text = "< BACK"

[connection signal="text_changed" from="Username" to="." method="_on_username_text_changed"]
