[gd_scene load_steps=12 format=3 uid="uid://b1fsjth1xixbd"]

[ext_resource type="Script" uid="uid://ctbbg5sdmup5i" path="res://main.gd" id="1_5w68l"]
[ext_resource type="Texture2D" uid="uid://bedue4nb5dkgn" path="res://carpincho.png" id="1_tn11u"]
[ext_resource type="Texture2D" uid="uid://cg5dor0ax8che" path="res://ctclogo.png" id="2_loq2x"]
[ext_resource type="Texture2D" uid="uid://bo4w7kdu0g2eb" path="res://characters/tuf.png" id="3_1c0uk"]
[ext_resource type="AudioStream" uid="uid://dc7oxwlixbuj7" path="res://characters/clicksoundeffect.mp3" id="5_aarli"]
[ext_resource type="Texture2D" uid="uid://d7fv1a3k42ow" path="res://ctcoin.png" id="6_1l8w0"]
[ext_resource type="Texture2D" uid="uid://bqkqjqmsvijag" path="res://settings-svgrepo-com.svg" id="7_o55ms"]
[ext_resource type="Texture2D" uid="uid://bwkgq4m83adog" path="res://gamepad-svgrepo-com.svg" id="8_hoawi"]
[ext_resource type="Texture2D" uid="uid://wed8alguxsos" path="res://web-svgrepo-com.svg" id="9_m8l3e"]
[ext_resource type="Texture2D" uid="uid://b4qqwot8f4s4h" path="res://store-1-svgrepo-com.svg" id="9_xxei0"]
[ext_resource type="Texture2D" uid="uid://dx7f4kmo45k4j" path="res://leaderboard-svgrepo-com.svg" id="10_kq6qe"]

[node name="Node2D" type="Node2D"]
position = Vector2(7, 2)
script = ExtResource("1_5w68l")

[node name="Carpincho" type="Sprite2D" parent="."]
position = Vector2(603, 402)
scale = Vector2(0.985742, 0.877865)
texture = ExtResource("1_tn11u")

[node name="Ctclogo" type="Sprite2D" parent="."]
position = Vector2(962, 66)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_loq2x")

[node name="Tuf" type="TextureButton" parent="."]
offset_left = 441.0
offset_top = 181.0
offset_right = 1368.0
offset_bottom = 1312.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_1c0uk")
metadata/_edit_use_anchors_ = true

[node name="Username" type="TextEdit" parent="."]
offset_left = 8.0
offset_top = 9.0
offset_right = 271.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
placeholder_text = "User"
metadata/_edit_use_anchors_ = true

[node name="Counter" type="Label" parent="."]
offset_left = 470.0
offset_top = 118.0
offset_right = 659.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 60
text = "points"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SaveButton" type="Button" parent="."]
offset_left = 120.0
offset_top = 86.0
offset_right = 213.0
offset_bottom = 179.0
text = "SAVE DATA"
metadata/_edit_use_anchors_ = true

[node name="ImportButton" type="Button" parent="."]
offset_left = 120.0
offset_top = 190.0
offset_right = 213.0
offset_bottom = 283.0
text = "IMPORT
 DATA"
metadata/_edit_use_anchors_ = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aarli")

[node name="Right" type="Button" parent="."]
offset_left = 761.0
offset_top = 205.0
offset_right = 779.0
offset_bottom = 236.0
scale = Vector2(10, 10)
text = ">"
metadata/_edit_use_anchors_ = true

[node name="Left" type="Button" parent="."]
offset_left = 229.0
offset_top = 205.0
offset_right = 247.0
offset_bottom = 236.0
scale = Vector2(10, 10)
text = "<"
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 222.0
offset_top = 88.0
offset_right = 922.0
offset_bottom = 129.0
max_value = 500.0
step = 0.05
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Coins" type="Label" parent="."]
offset_left = 513.0
offset_top = 507.0
offset_right = 645.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 50
text = "coins"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CtcoinButton" type="TextureButton" parent="."]
offset_left = 542.0
offset_top = 569.0
offset_right = 1117.0
offset_bottom = 1114.0
scale = Vector2(0.13, 0.13)
texture_normal = ExtResource("6_1l8w0")
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 86.0
offset_right = 106.0
offset_bottom = 179.0
text = "SETTINGS"
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Sprite2D" parent="SettingsButton"]
position = Vector2(46, 45)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_o55ms")

[node name="GamesButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 294.0
offset_right = 106.0
offset_bottom = 387.0
text = "MINIGAME"
metadata/_edit_use_anchors_ = true

[node name="Games" type="Sprite2D" parent="GamesButton"]
position = Vector2(46, 49)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_hoawi")

[node name="StoreButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 190.0
offset_right = 106.0
offset_bottom = 283.0
text = "STORE"
metadata/_edit_use_anchors_ = true

[node name="Store" type="Sprite2D" parent="StoreButton"]
position = Vector2(46, 48)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_xxei0")

[node name="LeaderboardButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 400.0
offset_right = 106.0
offset_bottom = 493.0
text = "LEADERS"
metadata/_edit_use_anchors_ = true

[node name="Leaderboard" type="Sprite2D" parent="LeaderboardButton"]
position = Vector2(46, 48)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_kq6qe")

[node name="NextcharButton" type="Button" parent="."]
offset_left = 995.0
offset_top = 135.0
offset_right = 1086.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 52
text = "?"
metadata/_edit_use_anchors_ = true

[node name="WebsiteButton" type="Button" parent="."]
offset_left = 18.0
offset_top = 539.0
offset_right = 109.0
offset_bottom = 632.0
text = "WEBSITE"
metadata/_edit_use_anchors_ = true

[node name="Website" type="Sprite2D" parent="WebsiteButton"]
position = Vector2(46, 47)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_m8l3e")

[node name="LinkButton" type="LinkButton" parent="WebsiteButton"]
layout_mode = 0
offset_right = 91.0
offset_bottom = 93.0
uri = "https://sites.google.com/view/kapibara-tm"
metadata/_edit_use_anchors_ = true

[node name="Remain" type="Label" parent="."]
offset_left = 478.0
offset_top = 35.0
offset_right = 652.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 40
text = "remain"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RemainText" type="Label" parent="."]
offset_left = 302.0
offset_top = 3.0
offset_right = 804.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 30
text = "Next character: remaining"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="."]
offset_left = 127.0
offset_top = 539.0
offset_right = 218.0
offset_bottom = 632.0
text = "X QUIT"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Tuf" to="." method="_on_char_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="save_button_pressed"]
[connection signal="pressed" from="ImportButton" to="." method="import_button_pressed"]
[connection signal="pressed" from="Right" to="." method="capybara_button_pressed"]
[connection signal="changed" from="ProgressBar" to="." method="_on_progress_bar_changed"]
[connection signal="pressed" from="SettingsButton" to="." method="settings_button_pressed"]
[connection signal="pressed" from="GamesButton" to="." method="games_button_pressed"]
[connection signal="pressed" from="NextcharButton" to="." method="capybara_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="quit_button_pressed"]
